<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/mainMenuviewview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:weightSum="1.0"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
            tools:layout_editor_absoluteX="0dp">


            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight=".25"
                android:orientation="horizontal"
                android:weightSum="1.0"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">

                <Button
                    android:id="@+id/upload_button"
                    style="@style/mainmenubutton"
                    android:onClick="onClickUpload"
                    android:scaleType="centerInside"
                    android:src="@drawable/uploadicon"
                    android:text="Upload"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageButton
                    android:id="@+id/upload_button"
                    style="@style/buttonwithImage"
                    android:onClick="onClickUpload"
                    android:scaleType="centerInside"
                    android:src="@drawable/uploadicon"
                    android:text="Parse "
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight=".25"
                android:orientation="horizontal"
                android:weightSum="1.0"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">


                <Button
                    android:id="@+id/database_button"
                    style="@style/mainmenubutton"
                    android:onClick="onClickDatabase"
                    android:scaleType="centerInside"
                    android:src="@drawable/listicon"
                    android:text="Saved Resumes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/parse_button" />

                <ImageButton
                    android:id="@+id/database_button"
                    style="@style/buttonwithImage"
                    android:onClick="onClickDatabase"
                    android:scaleType="centerInside"
                    android:src="@drawable/listicon"
                    android:text="Saved Resumes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/parse_button" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight=".25"
                android:orientation="horizontal"
                android:weightSum="1.0"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">

                <Button
                    android:id="@+id/companyData_button"
                    style="@style/mainmenubutton"
                    android:onClick="onClickCompanyInput"
                    android:text="Company Input"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/saved_company_info_button" />

                <ImageButton
                    android:id="@+id/companyData_button"
                    style="@style/buttonwithImage"
                    android:onClick="onClickCompanyInput"
                    android:src="@drawable/companyinput"
                    android:text="Company Input"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/saved_company_info_button" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight=".25"
                android:orientation="horizontal"
                android:weightSum="1.0"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">

                <Button
                    android:id="@+id/saved_company_info_button"
                    style="@style/mainmenubutton"
                    android:onClick="onClickSavedCompanyInfo"
                    android:text="Saved Company Info"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/saved_company_info_button"
                    style="@style/buttonwithImage"
                    android:onClick="onClickSavedCompanyInfo"
                    android:src="@drawable/businesscardicon"
                    android:text="Saved Company Info"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight=".25"
                android:orientation="horizontal"
                android:weightSum="1.0"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">

                <Button
                    android:id="@+id/nfc_button"
                    style="@style/mainmenubutton"
                    android:textStyle="bold"
                    android:onClick="onClickNFC"
                    android:textSize="20dp"
                    android:text="Receive"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_button" />

                <ImageButton
                    android:id="@+id/nfc_button"
                    style="@style/buttonwithImage"
                    android:src="@drawable/receiveicon"
                    android:text="Receive"
                    android:onClick="onClickNFC"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/company_button" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight=".25"
                android:orientation="horizontal"
                android:weightSum="1.0"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
                tools:layout_editor_absoluteX="200dp">

                <Button
                    android:id="@+id/company_button"
                    style="@style/mainmenubutton"
                    android:onClick="onClickCompany"
                    android:scaleType="centerInside"
                    android:src="@drawable/searchicon"
                    android:text="Company Search" />

                <ImageButton
                    android:id="@+id/company_button"
                    style="@style/buttonwithImage"
                    android:onClick="onClickCompany"
                    android:scaleType="centerInside"
                    android:src="@drawable/searchicon" />


            </LinearLayout>

            <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/linearLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight=".25"
                android:orientation="horizontal"
                android:weightSum="1.0"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="0dp">


                <Button
                    android:id="@+id/about_button"
                    style="@style/mainmenubutton"
                    android:onClick="onClickAbout"
                    android:src="@drawable/abouticon"
                    android:text="About Us"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

                <ImageButton
                    android:id="@+id/about_button"
                    style="@style/buttonwithImage"
                    android:onClick="onClickAbout"
                    android:scaleType="centerInside"
                    android:src="@drawable/abouticon"
                    android:text="About"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />



            </LinearLayout>


        </LinearLayout>

    </ScrollView>





    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

</androidx.constraintlayout.widget.ConstraintLayout>